added direcotories to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+jupyterhub.sqlite
+jupyterhub_cookie_secret
+notebooks/notebook.tex
+students/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
